fix: layout shift caused by redundant styles

--- a/styles/base.css
+++ b/styles/base.css
@@ -5,8 +5,7 @@
 
 html,
 body {
-  @apply size-full
-    [scrollbar-gutter:auto];
+  @apply h-full;
 }
 
 body {
